--- a/Laboratorio_1.ipynb
+++ b/Laboratorio_1.ipynb
@@ -1046,10 +1046,24 @@
         "1 = 2"
       ],
       "metadata": {
-        "id": "YZkf5aLHmhde"
+        "id": "YZkf5aLHmhde",
+        "outputId": "63b69cd4-f5b9-4231-9f7c-c210703f5f41",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "cannot assign to literal here. Maybe you meant '==' instead of '='? (<ipython-input-1-c0ab9e3898ea>, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c0ab9e3898ea>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1 = 2\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to literal here. Maybe you meant '==' instead of '='?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1057,10 +1071,25 @@
         "1 == 2"
       ],
       "metadata": {
-        "id": "qi5sJLuUmR0m"
+        "id": "qi5sJLuUmR0m",
+        "outputId": "d284eb77-793d-4af1-c3fa-84952bd069ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1068,10 +1097,25 @@
         "2 == 2"
       ],
       "metadata": {
-        "id": "8T_pNL9gmoT8"
+        "id": "8T_pNL9gmoT8",
+        "outputId": "094b698a-ae13-4cda-9d9e-f913483d47ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1079,10 +1123,25 @@
         "2 == 2.0"
       ],
       "metadata": {
-        "id": "hSQ9bC3Vmy96"
+        "id": "hSQ9bC3Vmy96",
+        "outputId": "48dde3a5-f913-4635-c6dc-0809a992e5db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1091,10 +1150,25 @@
         "car == 'bmw'"
       ],
       "metadata": {
-        "id": "PukwJABJm1rP"
+        "id": "PukwJABJm1rP",
+        "outputId": "6b61fc82-9fa3-4346-cab5-a4a493d40672",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1103,10 +1177,25 @@
         "car == 'bmw'"
       ],
       "metadata": {
-        "id": "cz5ibI_Wm9lq"
+        "id": "cz5ibI_Wm9lq",
+        "outputId": "4d170a5a-827d-40b1-817b-a33165c62a05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1120,14 +1209,56 @@
     {
       "cell_type": "code",
       "source": [
+        "nombre = 'Gustavo'\n",
+        "nombre.upper() == 'GUSTAVO'"
+      ],
+      "metadata": {
+        "id": "pjV_-yGGxqU9",
+        "outputId": "b6218a15-9ca0-407f-9b18-e263e00e3f93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "car = 'Audi'\n",
         "car == 'audi'"
       ],
       "metadata": {
-        "id": "2tLQKu9KnLC3"
+        "id": "2tLQKu9KnLC3",
+        "outputId": "d12310a7-8d0e-46c9-fd2a-e783ca471eab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1135,10 +1266,29 @@
         "car.lower()"
       ],
       "metadata": {
-        "id": "VFNGrgdfnZPK"
+        "id": "VFNGrgdfnZPK",
+        "outputId": "3050cf1a-d5a3-4138-fac1-c5a37c94d3d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'audi'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1146,10 +1296,29 @@
         "car.upper()"
       ],
       "metadata": {
-        "id": "8SDmobRZnNsl"
+        "id": "8SDmobRZnNsl",
+        "outputId": "60504753-a1fc-47ec-a8bf-50d8385962e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'AUDI'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1158,10 +1327,25 @@
         "car.lower() == 'audi'"
       ],
       "metadata": {
-        "id": "WOnmTIX9m3IQ"
+        "id": "WOnmTIX9m3IQ",
+        "outputId": "aca4eba3-7de4-47c5-d2da-9b66053fe74a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1175,13 +1359,55 @@
     {
       "cell_type": "code",
       "source": [
+        "last_name = \"Gustavo\"\n",
+        "last_name.lower() != \"Gustavo\""
+      ],
+      "metadata": {
+        "id": "hFVZ1kkDzXTf",
+        "outputId": "1259ce32-caed-488a-ff42-14f35cbec347",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "1 != 2"
       ],
       "metadata": {
-        "id": "9u0Sho8vno-g"
+        "id": "9u0Sho8vno-g",
+        "outputId": "df7d3ace-7f5d-4170-b44b-0b0f56573dfa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1189,10 +1415,25 @@
         "'Audi' != 'audi'"
       ],
       "metadata": {
-        "id": "EADKhXulntOP"
+        "id": "EADKhXulntOP",
+        "outputId": "3d7c3ed3-1186-42f7-d8c4-de754de186a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1200,10 +1441,25 @@
         "2 != 2.0"
       ],
       "metadata": {
-        "id": "lRCCtFKBnweq"
+        "id": "lRCCtFKBnweq",
+        "outputId": "7cc27c3b-af26-42e5-e19b-5f96704a592f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1214,10 +1470,47 @@
         "  print(\"Sostén las Anchoas!\")\n"
       ],
       "metadata": {
-        "id": "4x_KuchGnhHR"
+        "id": "4x_KuchGnhHR",
+        "outputId": "6b1b6cee-bc19-4c48-92b9-ebe713ee0497",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sostén las Anchoas!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color_pedido = input(\"Ingrese el color requerido: \").lower()\n",
+        "if color_pedido != \"negro\":\n",
+        "  print(\"Si hay en stock\")"
+      ],
+      "metadata": {
+        "id": "zfcvjGLr0lhR",
+        "outputId": "b2f910e1-023d-4392-ee8a-1fbcf39211df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingrese el color requerido: NEGRO\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1235,10 +1528,25 @@
         "age == 18"
       ],
       "metadata": {
-        "id": "TkAawBSMpHmN"
+        "id": "TkAawBSMpHmN",
+        "outputId": "84f748d4-3754-4db0-a4d1-df888596d41c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "code",
