--- a/Laboratorio_1.ipynb
+++ b/Laboratorio_1.ipynb
@@ -1053,7 +1053,7 @@
           "height": 106
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1077,7 +1077,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1103,7 +1103,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1129,7 +1129,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1156,7 +1156,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1183,7 +1183,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1219,7 +1219,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1246,7 +1246,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1273,7 +1273,7 @@
           "height": 35
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1303,7 +1303,7 @@
           "height": 35
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1333,7 +1333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1369,7 +1369,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1395,7 +1395,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1421,7 +1421,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1447,7 +1447,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,7 +1476,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1501,7 +1501,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1534,7 +1534,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1557,10 +1557,22 @@
         "  print(\"Respuesta incorrecta, intenta nuevamente!\")"
       ],
       "metadata": {
-        "id": "cuh3qVzEp14h"
+        "id": "cuh3qVzEp14h",
+        "outputId": "3f4a982a-6827-47eb-f341-46171932094c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Respuesta incorrecta, intenta nuevamente!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1571,10 +1583,23 @@
         "  print(\"Respuesta incorrecta, intenta nuevamente!\")"
       ],
       "metadata": {
-        "id": "Q8P2FyvworiB"
+        "id": "Q8P2FyvworiB",
+        "outputId": "4c9f1fa9-3976-410b-ff09-a155a2673046",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese su respuesta: 43\n",
+            "Respuesta incorrecta, intenta nuevamente!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1583,10 +1608,25 @@
         "age < 21"
       ],
       "metadata": {
-        "id": "BSGJ9oNEqCOj"
+        "id": "BSGJ9oNEqCOj",
+        "outputId": "17331f13-a378-43ef-e338-7cfd003c6516",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1594,10 +1634,25 @@
         "age <= 21"
       ],
       "metadata": {
-        "id": "wf3dMEHIqGh-"
+        "id": "wf3dMEHIqGh-",
+        "outputId": "e1c68fbd-0e17-43ee-93a3-ffb0419bdcc3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1605,10 +1660,25 @@
         "age > 21"
       ],
       "metadata": {
-        "id": "ALtGWaW_qIEG"
+        "id": "ALtGWaW_qIEG",
+        "outputId": "c285db97-0930-4d37-eaf3-152e711a3dd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1616,10 +1686,77 @@
         "age >= 21"
       ],
       "metadata": {
-        "id": "U-sv2_SKqJ3T"
+        "id": "U-sv2_SKqJ3T",
+        "outputId": "61b3121b-4246-4435-9343-dac8c8bd878d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(10.3)"
+      ],
+      "metadata": {
+        "id": "8cU9pPi56uFv",
+        "outputId": "b97632fe-29e2-467d-c122-f1a17e77e694",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(\"10\")"
+      ],
+      "metadata": {
+        "id": "_-1Dk_gP7guy",
+        "outputId": "9a06cbea-b368-4c5c-d70b-8ab3e3007c6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1638,10 +1775,25 @@
         "age_0 >= 21 and age_1 >= 21"
       ],
       "metadata": {
-        "id": "fPhw2J5U7Fgs"
+        "id": "fPhw2J5U7Fgs",
+        "outputId": "e7dacd0f-f5eb-4d26-89d8-edcd4035b9ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1650,10 +1802,25 @@
         "age_0 >= 21 and age_1 >= 21"
       ],
       "metadata": {
-        "id": "vxSjikcs7zkf"
+        "id": "vxSjikcs7zkf",
+        "outputId": "3fb028b7-7cdb-473b-e051-0fad078f7da7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1661,10 +1828,25 @@
         "(age_0 >= 21) and (age_1 >= 21)"
       ],
       "metadata": {
-        "id": "4sdZ7nWN75LC"
+        "id": "4sdZ7nWN75LC",
+        "outputId": "915f69fd-c6f1-415b-e433-51e2352364f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1674,10 +1856,25 @@
         "age_0 >= 21 or age_1 >= 21"
       ],
       "metadata": {
-        "id": "I_gV0j1n8NJA"
+        "id": "I_gV0j1n8NJA",
+        "outputId": "997c82f4-cdfe-4200-bb7b-198ac21411d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1686,10 +1883,25 @@
         "age_0 >= 21 or age_1 >= 21"
       ],
       "metadata": {
-        "id": "OutmfEzZ-9jQ"
+        "id": "OutmfEzZ-9jQ",
+        "outputId": "f3741daf-adb1-4bf9-9421-1e4f6f16cf3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1711,10 +1923,23 @@
         "    print(\"Eres menor de edad.\")\n"
       ],
       "metadata": {
-        "id": "FgqtGbP8lNvd"
+        "id": "FgqtGbP8lNvd",
+        "outputId": "34af1ab3-002b-4f7a-a89a-d22b1fe5e379",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¿Cuántos años tienes? 19\n",
+            "Eres mayor de edad.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1732,12 +1957,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Solicitar al usuario su edad\n",
+        "age = int(input(\"Por favor, ingrese su edad: \"))\n",
+        "\n",
+        "#Aplicar descuentos basados en la edad\n",
+        "if age < 18:\n",
+        "  print(\"Obtienes un 50% de descuento\")\n",
+        "elif age >= 18 and age <= 65:\n",
+        "  print(\"Obtienes un 10% de descuento\")\n",
+        "else:\n",
+        "  print(\"Obtienes un 30% de descuento\")"
+      ],
       "metadata": {
-        "id": "8wxUXYwOlYNE"
+        "id": "8wxUXYwOlYNE",
+        "outputId": "ab96f70a-eea7-4254-8c2f-94fba7837b70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Por favor, ingrese su edad: 65\n",
+            "Obtienes un 10% de descuento\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1833,12 +2082,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Solicitar al usuario su nacionalidad\n",
+        "nationality = input(\"Por favor, ingrese su nacionalidad: \").lower()\n",
+        "age = int(input(\"Por favor, ingrese su edad: \"))\n",
+        "\n",
+        "#Aplicar condicionales en base a su nacionalidad\n",
+        "if nationality == \"peruana\" and age >= 18:\n",
+        "  print(\"Usted puede votar\")\n",
+        "else:\n",
+        "  print(\"Usted no puede votar\")\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "Ii171M1omnjG"
+        "id": "Ii171M1omnjG",
+        "outputId": "7d671309-d8e9-4f16-c69c-b7df36ccb847",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Por favor, ingrese su nacionalidad: PERUANA\n",
+            "Por favor, ingrese su edad: 18\n",
+            "Usted puede votar\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1883,12 +2157,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Pedir al usuario su nota\n",
+        "grade = int(input(\"Por favor, ingrese su nota: \"))\n",
+        "\n",
+        "# Validar la calificación\n",
+        "if grade >= 90 and grade <= 100:\n",
+        "    print(\"SOBRESALIENTE\")\n",
+        "elif grade >= 70 and grade < 90:\n",
+        "    print(\"APROBADO\")\n",
+        "elif grade < 70 and grade >= 0:\n",
+        "    print(\"DESAPROBADO\")\n",
+        "else:\n",
+        "    print(\"Nota no válida. Por favor, ingrese una nota entre 0 y 100.\")\n"
+      ],
       "metadata": {
-        "id": "Mo1leF6PmnG4"
+        "id": "Mo1leF6PmnG4",
+        "outputId": "93d4a3a1-ff51-4ed3-8fa8-09ebed6c27eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Por favor, ingrese su nota: 100\n",
+            "SOBRESALIENTE\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
