--- a/MODULO-II/Estructuras_selectivas_repetitivas.ipynb
+++ b/MODULO-II/Estructuras_selectivas_repetitivas.ipynb
@@ -2594,6 +2594,46 @@
     {
       "cell_type": "code",
       "source": [
+        "while True:\n",
+        "  message = input('Dime algo y lo repetiré: ')\n",
+        "  print(message)"
+      ],
+      "metadata": {
+        "id": "f0QpP-YUVoP-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 2\n",
+        "while n < 10:\n",
+        "  print(n)\n",
+        "  n *= 3"
+      ],
+      "metadata": {
+        "id": "U378q-xtP6IM",
+        "outputId": "077e85f2-4ba7-47a3-a2e9-192fd159d6af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "i = 0\n",
         "\n",
         "while i < 10:\n",
@@ -2665,6 +2705,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DVqcMTnzVlvG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "i"
       ],
@@ -2688,6 +2737,24 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "condition = True\n",
+        "\n",
+        "while condition:\n",
+        "  message = input('Dime algo y lo repetiré (Escriba EXIT para salir: )')\n",
+        "  if message.lower() == 'EXIT':\n",
+        "    condition = False\n",
+        "  else:\n",
+        "    print(message)\n"
+      ],
+      "metadata": {
+        "id": "-HjAloZHX156"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
