--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -148,10 +148,25 @@
         "print('¡Contraseña correcta!')\n"
       ],
       "metadata": {
-        "id": "3c2nrwndHg55"
+        "id": "3c2nrwndHg55",
+        "outputId": "6a839465-b4a5-4fbf-ed50-26f8b04f4431",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce la contraseña: recreto\n",
+            "Introduce la contraseña: sas\n",
+            "Introduce la contraseña: secreto\n",
+            "¡Contraseña correcta!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,10 +195,26 @@
         "    print('¡Contraseña correcta!')\n"
       ],
       "metadata": {
-        "id": "kcMZzz2iGSHV"
+        "id": "kcMZzz2iGSHV",
+        "outputId": "f6d4426c-6c63-402c-c203-bd44212a0ba6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce la contraseña: rem\n",
+            "Introduce la contraseña: rem\n",
+            "Introduce la contraseña: rem\n",
+            "Introduce la contraseña: rem\n",
+            "cuenta bloqueada!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -205,12 +236,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 10\n",
+        "\n",
+        "while contador >= 1:\n",
+        "    print(contador)\n",
+        "    contador -= 1\n"
+      ],
       "metadata": {
-        "id": "r_V8GaQOI2H3"
+        "id": "r_V8GaQOI2H3",
+        "outputId": "435df848-e10a-47f8-e6e8-6b5d6637bfc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
