--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +250,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,12 +281,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "sumatoria = 0\n",
+        "\n",
+        "while True:\n",
+        "    numero = int(input(\"Ingresa un número entero (0 para terminar): \"))\n",
+        "    if numero == 0:\n",
+        "      break\n",
+        "    sumatoria += numero\n",
+        "\n",
+        "print(\"La suma total es\", sumatoria)"
+      ],
       "metadata": {
-        "id": "e0BXlSAsJpGW"
+        "id": "e0BXlSAsJpGW",
+        "outputId": "9e206168-e154-42cf-d66d-34fe9e2f29bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa un número entero (0 para terminar): 45\n",
+            "Ingresa un número entero (0 para terminar): 45\n",
+            "Ingresa un número entero (0 para terminar): 45\n",
+            "Ingresa un número entero (0 para terminar): 0\n",
+            "La suma total es 135\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -299,12 +325,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "number = \"\"\n",
+        "secret_number = 48\n",
+        "while number != secret_number:\n",
+        "    number = int(input(\"Ingrese un número aleatorio entre 1 y 100: \"))\n",
+        "    if number > secret_number:\n",
+        "      print(\"El número ingresado es mayor que el número secreto\")\n",
+        "    elif number < secret_number:\n",
+        "      print(\"El número ingresado es menor que el número secreto\")\n",
+        "    else:\n",
+        "      print(\"Felicidades, Adivinaste el número secreto\")\n",
+        "      break\n"
+      ],
       "metadata": {
-        "id": "GDOB2-oBJowQ"
+        "id": "GDOB2-oBJowQ",
+        "outputId": "b5d33709-75b3-417b-b241-89e7a7f993b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número aleatorio entre 1 y 100: 38\n",
+            "El número ingresado es menor que el número secreto\n",
+            "Ingrese un número aleatorio entre 1 y 100: 42\n",
+            "El número ingresado es menor que el número secreto\n",
+            "Ingrese un número aleatorio entre 1 y 100: 48\n",
+            "Felicidades, Adivinaste el número secreto\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
