--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -299,7 +299,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +326,7 @@
     {
       "cell_type": "code",
       "source": [
-        "number = \"\"\n",
+        "number = 0\n",
         "secret_number = 48\n",
         "while number != secret_number:\n",
         "    number = int(input(\"Ingrese un número aleatorio entre 1 y 100: \"))\n",
@@ -336,7 +336,7 @@
         "      print(\"El número ingresado es menor que el número secreto\")\n",
         "    else:\n",
         "      print(\"Felicidades, Adivinaste el número secreto\")\n",
-        "      break\n"
+        "\n"
       ],
       "metadata": {
         "id": "GDOB2-oBJowQ",
@@ -345,7 +345,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
